Removed Wrong Graph
- Removed the main Python module.
- Removed the graph display and set it up for refactoring, since the way it was appearing was not as intended.

--- a/what_is_it.ipynb
+++ b/what_is_it.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "![grid-like arrays of the game of life](./img/arrays.png)\n",
     "\n",
-    "The cell in focus (the one in the middle) is either alive or dead, surrounded by 8 neighbors."
+    "The cell \"in focus\" <i>(the one in the middle)</i> can be either alive or dead, surrounded by its 8 neighbors."
    ]
   },
   {
