--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,17 @@
     "    [dead, dead, alive]\n",
     "    ])\n",
     "\n",
-    "next_grid = initial_grid.copy()\n",
-    "next_grid = create_next_grid(next_grid)"
+    "current_grid = initial_grid.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "img = ax.imshow()"
    ]
   }
  ],
