Refactored Main Module
- Refactored all the main code and saved the old one in another file.
- Added the end result to the README file.
- Created the 'src' folder and relocated a few files.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,94 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as FuncAnimation"
+    "import matplotlib.animation as animation\n",
+    "from IPython.display import display, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dead = 0\n",
-    "alive = 1"
+    "# Dimensions of the grid\n",
+    "GRID_SIZE = 100\n",
+    "grid = np.random.choice([0, 1], size=(GRID_SIZE, GRID_SIZE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_each_unit(cell, neighbors):\n",
-    "    neighbors = np.sum(neighbors) - cell\n",
-    "    \n",
-    "    if cell == alive:\n",
-    "        # Underpopulation\n",
-    "        if neighbors < 2: \n",
-    "            return dead\n",
-    "        \n",
-    "        # Next Generation\n",
-    "        if neighbors in [2, 3]: \n",
-    "            return alive\n",
-    "        \n",
-    "        # Overpopulation\n",
-    "        if neighbors > 3: \n",
-    "            return dead\n",
-    "    else:\n",
-    "        # Reproduction\n",
-    "        if neighbors == 3: \n",
-    "            return alive\n",
-    "    return cell"
+    "def generate_grid(grid):\n",
+    "    # Creating a copy of the grid to update it\n",
+    "    new_grid = grid.copy()\n",
+    "\n",
+    "    for row in range(GRID_SIZE):\n",
+    "        for column in range(GRID_SIZE):\n",
+    "            # Counting the number of live neighbors\n",
+    "            total = int((grid[row, (column-1)%GRID_SIZE] + grid[row, (column+1)%GRID_SIZE] +\n",
+    "                         grid[(row-1)%GRID_SIZE, column] + grid[(row+1)%GRID_SIZE, column] +\n",
+    "                         grid[(row-1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row-1)%GRID_SIZE, (column+1)%GRID_SIZE] +\n",
+    "                         grid[(row+1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row+1)%GRID_SIZE, (column+1)%GRID_SIZE]))\n",
+    "            \n",
+    "            # Rules\n",
+    "            if grid[row, column] == 1:\n",
+    "                if (total < 2) or (total > 3):\n",
+    "                    new_grid[row, column] = 0\n",
+    "            else:\n",
+    "                if total == 3:\n",
+    "                    new_grid[row, column] = 1\n",
+    "    return new_grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_next_grid(grid):\n",
-    "    # Creating a padded grid to handle edge cells\n",
-    "    bigger_grid = np.pad(grid, pad_width=1)\n",
-    "\n",
-    "    # Creating an array of zeros with the same shape as the original grid\n",
-    "    other_generated_grid = np.zeros_like(grid)\n",
-    "\n",
-    "    # Iterates over the rows excluding the first and last rows\n",
-    "    for row in range(1, bigger_grid.shape[0] - 1):\n",
-    "        # Iterates over the columns excluding the first and last columns\n",
-    "        for column in range(1, bigger_grid.shape[1] - 1):\n",
-    "\n",
-    "            # Extracting the 3x3 neighborhood\n",
-    "            nearby_cells = bigger_grid[row-1:row+2, column-1:column+2]\n",
-    "\n",
-    "            # Assigns the updated state of the cell in focus at the specified row and column\n",
-    "            # and determines the next state of the cell in focus based on the surrounding cells\n",
-    "            other_generated_grid[row-1, column-1] = update_each_unit(bigger_grid[row, column], nearby_cells)\n",
-    " \n",
-    "    return other_generated_grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "initial_grid = np.array([\n",
-    "    [dead, dead, alive],\n",
-    "    [dead, dead, alive],\n",
-    "    [dead, dead, alive]\n",
-    "    ])\n",
-    "\n",
-    "current_grid = initial_grid.copy()"
+    "def update_grid(frame):\n",
+    "    global grid, mat\n",
+    "    grid = generate_grid(grid)\n",
+    "    mat.set_data(grid)\n",
+    "    return [mat]"
    ]
   },
   {
@@ -98,8 +70,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "img = ax.imshow()"
+    "# Creating a figure, axes and a heatmap \n",
+    "figure, axes = plt.subplots(facecolor='gray')\n",
+    "mat = axes.matshow(grid, cmap=\"binary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate = animation.FuncAnimation(figure, update_grid, interval=30, save_count=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the animation as a GIF\n",
+    "#animate.save('animation.gif', writer='imagemagick')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the animation\n",
+    "display(HTML(animate.to_jshtml()))"
    ]
   }
  ],
