--- a/src/what_is_it.ipynb
+++ b/src/what_is_it.ipynb
@@ -66,8 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dead = 0\n",
-    "alive = 1"
+    "# State of cells\n",
+    "DEAD = 0\n",
+    "ALIVE = 1"
    ]
   },
   {
@@ -88,26 +89,26 @@
    "outputs": [],
    "source": [
     "def rules(cell, neighbours):    \n",
-    "    if cell == alive:\n",
+    "    if cell == ALIVE:\n",
     "        # Underpopulation\n",
     "        if neighbours < 2:\n",
     "            print(\"The living cell had fewer than two living neighbors, thus it died because of underpopulation.\")\n",
-    "            return dead\n",
+    "            return DEAD\n",
     "        \n",
     "        # Survival / Next Generation\n",
     "        if neighbours in [2, 3]:\n",
     "            print(\"The living cell had two or three living neighbors, then it lives on to the next generation.\")\n",
-    "            return alive\n",
+    "            return ALIVE\n",
     "        \n",
     "        # Overpopulation\n",
     "        if neighbours > 3:\n",
     "            print(\"The living cell died because of overpopulation since it had more than three living neighbors\")\n",
-    "            return dead\n",
+    "            return DEAD\n",
     "    else:\n",
     "        # Reproduction\n",
     "        if neighbours == 3:\n",
     "            print(\"The cell began dead and had exactly three living neighbors. Therefore, it becomes a living cell bbecause of reproduction.\")\n",
-    "            return alive\n",
+    "            return ALIVE\n",
     "        else:\n",
     "            # Otherwise, the cell state remains unchanged\n",
     "            print(\"Cell state remains unchanged.\")     \n",
@@ -123,21 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The living cell had two or three living neighbors, then it lives on to the next generation.\n",
-      "New cell state:  alive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_cell_state = rules(alive, 2) # This number mimicks the amount of living neighbours\n",
-    "print(\"New cell state: \", \"alive\" if new_cell_state == alive else 'dead')"
+    "new_cell_state = rules(ALIVE, 2) # This number mimicks the amount of living neighbours\n",
+    "print(\"New cell state: \", \"alive\" if new_cell_state == ALIVE else 'dead')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In summary, Conway's Game of Life is an interesting example of a cellular automaton that simulates the life and death of cells on a grid based on simple rules. Through iterations of these rules, complex and often beautiful patterns can emerge from random initial states."
    ]
   },
   {
@@ -146,17 +145,17 @@
    "source": [
     "# [Cellular Automaton](https://mathworld.wolfram.com/ElementaryCellularAutomaton.html)\n",
     "\n",
-    "The simplest class of one-dimensional cellular automata. Elementary cellular automata have two possible values for each cell (0 or 1), and rules that depend only on nearest neighbor values. As a result, the evolution of an elementary cellular automaton can completely be described by a table specifying the state a given cell will have in the next generation based on the value of the cell to its left, the value the cell itself, and the value of the cell to its right.\n",
+    "The study of cellular automata is not limited to Conway's Game of Life. There's more to it, like one of the simplest classes of cellular automata, the elementary cellular automaton, which operates on a one-dimensional grid with basic rules dependent only on the nearest neighbors. Elementary cellular automata have two possible values for each cell (0 or 1) and rules that depend only on the values of the nearest neighbors.\n",
     "\n",
-    "![elementary cellular automata](./img/rule_22.png)\n",
-    "\n"
+    "![elementary cellular automata](./img/rule_22.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 𓆟 𓆞 𓆝 𓆟 𓆞 𓆝 𓆟 𓆞 𓆝 𓆟 𓆞\n"
+    "### 𓆟 𓆞 𓆝 𓆟 𓆞 𓆝 𓆟 𓆞 𓆝 𓆟 𓆞\n",
+    "This can be traced back to the origins of life, as discussed by [John von Neumann](https://mathshistory.st-andrews.ac.uk/Biographies/Von_Neumann/), who defined life as a system capable of self-reproduction and simulating a Turing machine.\n"
    ]
   },
   {
@@ -165,8 +164,10 @@
    "source": [
     "# [Origins of life](https://macbuse.github.io/PROG/life.html#origins-of-life-lol)\n",
     "\n",
-    "In 1940, [John von Neumann](https://mathshistory.st-andrews.ac.uk/Biographies/Von_Neumann/) defined life as a creation (as a being or organism). Which can reproduce itself and simulate a Turing machine.\n",
-    "[Stanislaw Ulam](https://mathshistory.st-andrews.ac.uk/Biographies/Ulam/) who invented cellular automata, discussed using computers to simulate his cellular automata in a two-dimensional lattice in several papers. In parallel, von Neumann attempted to construct Ulam’s cellular automaton.\n",
+    "\n",
+    "[Stanislaw Ulam](https://mathshistory.st-andrews.ac.uk/Biographies/Ulam/) who invented cellular automata, discussed using computers to simulate his cellular automata in a two-dimensional lattice in several papers. It provided a practical framework for exploring these concepts using computational simulations on a grid.\n",
+    "\n",
+    "In parallel, von Neumann attempted to construct Ulam’s cellular automaton.\n",
     "Conway chose his rules carefully, after considerable experimentation, to meet the following criteria:\n",
     "\n",
     "1. There should be no explosive growth.\n",
