Created Neighbor Counting Notebook
- Created the neighbor counting notebook.
- Put the constants "DEAD" and "ALIVE" in all caps for best practices.
- Changed the total variable name to `total_living_neighbors` in the main.ipynb module.

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,9 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dimensions of the grid\n",
     "GRID_SIZE = 100\n",
-    "grid = np.random.choice([0, 1], size=(GRID_SIZE, GRID_SIZE))"
+    "DEAD = 0\n",
+    "ALIVE = 1\n",
+    "\n",
+    "grid = np.random.choice([DEAD, ALIVE], size=(GRID_SIZE, GRID_SIZE))"
    ]
   },
   {
@@ -35,19 +37,22 @@
     "\n",
     "    for row in range(GRID_SIZE):\n",
     "        for column in range(GRID_SIZE):\n",
-    "            # Counting the number of live neighbors\n",
-    "            total = int((grid[row, (column-1)%GRID_SIZE] + grid[row, (column+1)%GRID_SIZE] +\n",
-    "                         grid[(row-1)%GRID_SIZE, column] + grid[(row+1)%GRID_SIZE, column] +\n",
-    "                         grid[(row-1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row-1)%GRID_SIZE, (column+1)%GRID_SIZE] +\n",
-    "                         grid[(row+1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row+1)%GRID_SIZE, (column+1)%GRID_SIZE]))\n",
+    "\n",
+    "            # Counting the number of living neighbors\n",
+    "            total_living_neighbors = int((\n",
+    "                grid[row, (column-1)%GRID_SIZE] + grid[row, (column+1)%GRID_SIZE] +\n",
+    "                grid[(row-1)%GRID_SIZE, column] + grid[(row+1)%GRID_SIZE, column] +\n",
+    "                grid[(row-1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row-1)%GRID_SIZE, (column+1)%GRID_SIZE] +\n",
+    "                grid[(row+1)%GRID_SIZE, (column-1)%GRID_SIZE] + grid[(row+1)%GRID_SIZE, (column+1)%GRID_SIZE]\n",
+    "                ))\n",
     "            \n",
     "            # Rules\n",
     "            if grid[row, column] == 1:\n",
-    "                if (total < 2) or (total > 3):\n",
-    "                    new_grid[row, column] = 0\n",
-    "            else:\n",
-    "                if total == 3:\n",
-    "                    new_grid[row, column] = 1\n",
+    "                if (total_living_neighbors < 2) or (total_living_neighbors > 3):\n",
+    "                    new_grid[row, column] = DEAD # Living cell dies\n",
+    "\n",
+    "            elif total_living_neighbors == 3:\n",
+    "                    new_grid[row, column] = ALIVE  # Dead cell becomes alive\n",
     "    return new_grid"
    ]
   },
