--- a/src/what_is_it.ipynb
+++ b/src/what_is_it.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The living cell had two or three living neighbors, then it lives on to the next generation.\n",
+      "New cell state:  alive\n"
+     ]
+    }
+   ],
    "source": [
     "new_cell_state = rules(ALIVE, 2) # This number mimicks the amount of living neighbours\n",
     "print(\"New cell state: \", \"alive\" if new_cell_state == ALIVE else 'dead')"
@@ -193,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
